--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -41,9 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs" />
+    <Compile Include="Alumno.cs" />
     <Compile Include="Dia.cs" />
     <Compile Include="EjercicioAsignado.cs" />
     <Compile Include="EjercicioBase.cs" />
+    <Compile Include="Historial.cs" />
+    <Compile Include="Profesor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rutina.cs" />
     <Compile Include="Usuario.cs" />
