--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
+    <Compile Include="AlumnoNegocio.cs" />
     <Compile Include="DiaNegocio.cs" />
     <Compile Include="EjercicioAsignadoNegocio.cs" />
     <Compile Include="EjercicioBaseNegocio.cs" />
