--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DiaNegocio.cs" />
     <Compile Include="EjercicioAsignadoNegocio.cs" />
     <Compile Include="EjercicioBaseNegocio.cs" />
+    <Compile Include="ProfesorNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RutinaNegocio.cs" />
     <Compile Include="UsuarioNegocio.cs" />
