--- a/TCP-EQUIPO5B-ENTRENAPP/TCP-EQUIPO5B-ENTRENAPP.csproj
+++ b/TCP-EQUIPO5B-ENTRENAPP/TCP-EQUIPO5B-ENTRENAPP.csproj
@@ -122,6 +122,7 @@
     <Content Include="Global.asax" />
     <Content Include="Login.aspx" />
     <Content Include="PerfilAlumno.aspx" />
+    <Content Include="Rutina.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -219,6 +220,13 @@
       <DependentUpon>PerfilAlumno.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rutina.aspx.cs">
+      <DependentUpon>Rutina.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Rutina.aspx.designer.cs">
+      <DependentUpon>Rutina.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
