--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin.cs" />
+    <Compile Include="Gestor.cs" />
     <Compile Include="Alumno.cs" />
     <Compile Include="Dia.cs" />
     <Compile Include="EjercicioAsignado.cs" />
