--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DiaNegocio.cs" />
     <Compile Include="EjercicioAsignadoNegocio.cs" />
     <Compile Include="EjercicioBaseNegocio.cs" />
+    <Compile Include="HistorialNegocio.cs" />
     <Compile Include="ProfesorNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RutinaNegocio.cs" />
