--- a/TCP-EQUIPO5B-ENTRENAPP/Tcp-Equipo5B-Entrenapp.csproj
+++ b/TCP-EQUIPO5B-ENTRENAPP/Tcp-Equipo5B-Entrenapp.csproj
@@ -120,6 +120,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
+    <Content Include="Gestor.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Login.aspx" />
     <Content Include="PerfilAlumno.aspx" />
@@ -204,6 +205,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Gestor.aspx.cs">
+      <DependentUpon>Gestor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Gestor.aspx.designer.cs">
+      <DependentUpon>Gestor.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
