Se crea la ventana para crear nuevo ejercicio base con la funcionalidad para agregarlo OK

--- a/TCP-EQUIPO5B-ENTRENAPP/TCP-EQUIPO5B-ENTRENAPP.csproj
+++ b/TCP-EQUIPO5B-ENTRENAPP/TCP-EQUIPO5B-ENTRENAPP.csproj
@@ -118,6 +118,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="CrearNuevoEjercicio.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Gestor.aspx" />
@@ -199,6 +200,13 @@
     </Compile>
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CrearNuevoEjercicio.aspx.cs">
+      <DependentUpon>CrearNuevoEjercicio.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CrearNuevoEjercicio.aspx.designer.cs">
+      <DependentUpon>CrearNuevoEjercicio.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
